# snpcert

./: .gitignore
.github/workflows/: build-and-release.yml  build.yml  ghdp-ci.yml  release.yml
dispatch/: README.md
dispatch/src/: github.rs
dispatch/src/http/: service.rs
docs/: how-to-generate-certs.md
ghdp/: Cargo.toml  README.md
ghdp/src/: main.rs  proxy.rs  tests.rs
images/guest-debian-trixie/: mkosi.conf
images/guest-fedora-41/: mkosi.conf
images/host-debian-bookworm/: mkosi.conf
images/host-fedora-41/: mkosi.conf
images/host-ubuntu-oracular/: mkosi.conf
modules/common/mkosi.extra/usr/local/lib/systemd/system/: report.target
modules/guest/: mkosi.conf
modules/guest-measurement/mkosi.extra/usr/local/lib/scripts/: guest_measurement.sh
modules/guest-measurement/mkosi.extra/usr/local/lib/systemd/system/: calculate-measurement.service
modules/host/: mkosi.conf
modules/launch-snp-guest/mkosi.extra/usr/local/lib/scripts/: launch-guest.sh
modules/logging/capture-guest-logs-in-host/: mkosi.build
modules/logging/check-guest-logging-status/mkosi.extra/usr/local/lib/scripts/: check-guest-logging-status.sh
modules/logging/host/: README.md
modules/logging/host/mkosi.extra/usr/lib/systemd/system/: systemd-journal-remote.service
modules/logging/snp-tests-summary/mkosi.extra/usr/local/lib/scripts/: snp-tests-log-parser.py
modules/snpguest/: README.md
modules/snpguest/mkosi.extra/usr/local/lib/scripts/: snpguest_attestation.sh
modules/snpguest/mkosi.extra/usr/local/lib/systemd/system-preset/: 10-fetch-snpguest-attestation-status.preset
(+5 files in other folders)
